Ok, another awesome hacking session: - Fixing shortcut on linux (thx Alex) - Adding MetaData class which wraps yql and fetchs all meta data (meta tags, title, etc.) - Introducing Metacafe text extension (Mark, it's your turn) - Fixing error handling in youtube extension

--- a/public/stylesheets/text_extension.css
+++ b/public/stylesheets/text_extension.css
@@ -131,6 +131,7 @@
 
 /* =VIDEO/FLASH TEXT EXTENSION (YouTube, Slideshare, ...)
 --------------------------------------------------------------------------- */
+#text-extension-preview .text-extension-results.Metacafe object,
 #text-extension-preview .text-extension-results.Slideshare object,
 #text-extension-preview .text-extension-results.Vimeo object,
 #text-extension-preview .text-extension-results.YouTube object {
@@ -138,6 +139,7 @@
   height: 280px;
 }
 
+.text-extension-results.Metacafe object,
 .text-extension-results.Slideshare object,
 .text-extension-results.Vimeo object,
 .text-extension-results.YouTube object {
@@ -146,6 +148,7 @@
   margin-bottom: 5px;
 }
 
+.text-extension-results.Metacafe .media a:after,
 .text-extension-results.Slideshare .media a:after,
 .text-extension-results.Vimeo .media a:after,
 .text-extension-results.YouTube .media a:after {
@@ -164,12 +167,14 @@
   text-shadow: 2px 2px 2px #000;
 }
 
+.text-extension-results.Metacafe .media a:hover:after,
 .text-extension-results.Slideshare .media a:hover:after,
 .text-extension-results.Vimeo .media a:hover:after,
 .text-extension-results.YouTube .media a:hover:after {
   opacity: 0.9;
 }
 
+.text-extension-results.Metacafe .media a:active:after,
 .text-extension-results.Slideshare .media a:active:after,
 .text-extension-results.Vimeo .media a:active:after,
 .text-extension-results.YouTube .media a:active:after {
@@ -177,6 +182,7 @@
 }
 
 /* TODO: Fix this, it is needed (again) to avoid :hover conflict with :after pseudo elements */
+.text-extension-results.Metacafe .media a:hover img,
 .text-extension-results.Slideshare .media a:hover img,
 .text-extension-results.Vimeo .media a:hover img,
 .text-extension-results.YouTube .media a:hover img {
